# siray-comfyui

./: .gitignore  CLAUDE.md  README.md  __init__.py  config.ini.tmp  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
py/: __init__.py  nodes.py
py/siray_api/: client.py  utils.py
web/: .gitkeep  videoPlayer.js
web/docs/: Siray Client.md  Siray Model.md  Siray Video Player.md
