[project]
name = "siray-comfyui"
description = "Custom ComfyUI nodes for Siray image/video models with dynamic schema-based inputs, authentication, and video streaming. (Description by CC)"
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["siray>=0.2.2", "requests~=2.32.5", "pillow~=11.3.0", "numpy~=2.0.2", "torchvision~=0.23.0"]

[project.urls]
Repository = "https://github.com/siray-ai/siray-comfyui"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/siray-ai/siray-comfyui/wiki"
"Bug Tracker" = "https://github.com/siray-ai/siray-comfyui/issues"

[tool.comfy]
PublisherId = "siray"
DisplayName = "siray-comfyui"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
